SB003 Add fixes - version 0.7.3